--- a/gibbs.ipynb
+++ b/gibbs.ipynb
@@ -11,7 +11,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dirichlet process prior on mixture of gaussians with base distribution $\\mu \\sim N(0, 5I)$ and $x \\sim N(\\mu, I)$. Uses CRP to assign cluster membership. Uses Gibbs sampling with MAP estimates of cluster membership and cluster $\\mu$"
+    "Dirichlet process prior on mixture of gaussians with base distribution $\\mu \\sim N(0, 5I)$ and $x \\sim N(\\mu, I)$. Uses CRP to assign cluster membership. Uses Gibbs sampling with MAP estimates of cluster membership and cluster $\\mu$.\n",
+    "\n",
+    "### Derivation of $\\mu_{MAP}$\n",
+    "\n",
+    "Where $D$ is the subset of point that are in the mixture associated with the gaussian whose $\\mu$ is being optimized and $N$ is the size of that subset.\n",
+    "\n",
+    "$\\mu_{MAP} = \\max_\\mu P(\\mu | D)$\n",
+    "\n",
+    "$\\mu_{MAP} = \\max_\\mu \\frac{P(D | \\mu) P(\\mu)}{P(D)}$\n",
+    "\n",
+    "$\\mu_{MAP} = \\max_\\mu P(D | \\mu) P(\\mu)$\n",
+    "\n",
+    "$\\mu_{MAP} = \\max_\\mu \\left[ \\log P(D | \\mu) + \\log P(\\mu) \\right]$\n",
+    "\n",
+    "$\\mu_{MAP} = \\max_\\mu \\left[ \\left( \\sum_{x \\in D} \\frac{(x - \\mu)^2}{2 \\sigma^2} \\right) + \\frac{(\\mu - \\mu_0)^2}{2 \\sigma_0^2} \\right]$\n",
+    "\n",
+    "\n",
+    "$\\mu_{MAP} = \\max_\\mu \\left[ \\frac{\\mu^2}{2 \\sigma_0^2} + \\frac{N u^2}{2 \\sigma^2} - \\frac{\\mu \\mu_0}{\\sigma_0^2} - \\frac{\\mu}{\\sigma^2} \\sum_{x \\in D} x \\right]$\n",
+    "\n",
+    "$ \\frac{\\mu_{MAP}}{\\sigma_0^2} + \\frac{N \\mu_{MAP}}{\\sigma^2} - \\frac{\\mu_0}{\\sigma_0^2} - \\frac{1}{\\sigma^2} \\sum_{x \\in D} x  = 0$\n",
+    "\n",
+    "$ \\mu_{MAP} = \\left( \\frac{1}{\\sigma_0^2} + \\frac{M}{\\sigma^2} \\right)^{-1} \\left( \\frac{\\mu_0}{\\sigma_0^2} + \\frac{1}{\\sigma^2} \\sum_{x \\in D} x \\right) $\n",
+    "\n",
+    "So for $\\sigma = 1$, $\\sigma_0 = 5$, and $\\mu_0 = 0$:\n",
+    "\n",
+    "$ \\mu_{MAP} = \\left( \\frac{1}{25} + M \\right)^{-1} \\sum_{x \\in D} x $"
    ]
   },
   {
@@ -298,6 +323,7 @@
     "            table = crp.tables[table_name]\n",
     "            mu = meals_mu[table_name]\n",
     "            points = X[table]\n",
+    "            # See derivation above:\n",
     "            new_mu = np.sum(points, axis=0) / (1 / 25 + points.shape[0])\n",
     "            meals_mu[table_name] = new_mu\n",
     "        if (t + 1) % 1000 == 0:\n",
